ui/react/components/Dialog/style.css
.inputWrapper {
    padding: 5px 0;
}

.inputWrapper:first-child {
    padding: 20px 0 5px 0;
}

.inputWrapper:last-child {
    padding: 10px 0 20px 0;
}

.wrapper {
    padding-top: 20px;
}

.content {
    padding: 20px;
}

.topSection {
    border-bottom: 1px solid grey;
    padding: 20px;
}

.dataGridTable {
    width: 100%;
    font-family: Roboto,Arial;
    border: 1px solid #D7D6D6;
    font-size: 14px;
}
.dataGridTable a {
    color: #E93591;
    text-decoration: none;
}
.dataGridTable a:hover {
    text-decoration: underline;
}
.dataGridTable tr td, .dataGridTable tr, th {
    padding: .75rem;
}
.dataGridTable tr td {
    padding: .25rem;
}
.dataGridTable tr th {
    border-right: 1px solid #D7D6D6;
    text-align: center;
}
.dataGridTable tr {
    background: #FFFFFF;
    cursor: pointer;
    border-bottom: 1px solid #D7D6D6;
    -webkit-transition: background 0.2s ease-in-out;
    transition: background 0.2s ease-in-out;
}
.dataGridTable tbody tr:nth-child(2) {
    background: #FDFDFD;
}
.dataGridTable tbody tr.checked {
    background: #FFFBEF !important;
}
.dataGridTable tbody tr.selected {
    background: #FFFFCC !important;
}
.dataGridTable tbody tr.checked {
    background: #FFFCEB;
}
.dataGridTable tbody tr:hover {
    background: #F7F7F7;
}
.dataGridTable thead,
.dataGridTable thead tr,
.dataGridTable thead tr td {
    background: #F9F9F9;
    color: #595959;
    font-weight: bold;
}
.borderRight {
    background: rgb(249, 249, 249);
}

.outerWrap {
    width: 100%;
    display: table;
    font-size: 14px;
    color: #595959;
}
.outerWrap .labelWrap {
    width: 25%;
    display: table-cell;
    font-weight: bold;
    vertical-align: middle;
}
.outerWrap .inputWrap {
    width: 70%;
    display: table-cell;
    vertical-align: middle;
}
.lableWrap{
    padding: 5px 0 0 0;
}
.errorWrap {
    height: 23px;
    overflow: hidden;
    font-size: 12px;
    -webkit-transition: all 0.6s; /* Safari */
    transition: all 0.6s;
}
.errorWrap .errorMessage {
    color: #ff3333;
    margin: 5px 0 0;
}

.link {
    color: rgb(233, 53, 145) !important;
    display: block;
    padding: 10px 5px;
    text-decoration: none;
    cursor: pointer;
}
.link:hover {
    text-decoration: none;
}
.link > span {
    border: 1px solid rgb(233, 53, 145);
    padding: 0 5px;
    margin-right: 10px;
}

.title {
    padding: 15px 25px;
    border-bottom: 1px solid #FAFAFA;
    background-color: white;
    border: none;
}

.body {
   border-top: 1px solid #DCDBDB;
   background: #F5F5F5;
}


.dropdownWrap {
    width: 100%;
    position: relative;
    border: 1px solid #D6D6D6;
}

.dropdownWrap div {
    padding: 0 !important;
    margin: 0 !important;
    line-height: 30px !important;
    border: none !important;
    color: #595959 !important;
    text-align: left !important;
}

div.dropDownRoot {
    width: 100% !important;
    height: 28px !important;
    box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    padding-left: 10px !important;
    padding-right: 1px !important;
    background-color: white;
}

